<resources>
    <string name="app_name">DesafioFirebase</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">log in</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="add_new_game">add new game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="created_at">Created at</string>
    <string name="description">Description</string>
    <string name="save_game">save game</string>
    <string name="add_game_image">add game image</string>
</resources>