<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".login.view.LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="@dimen/dm_300dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dm_8dp"
        app:cardBackgroundColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dm_16dp"
            android:paddingTop="@dimen/dm_8dp"
            android:paddingBottom="@dimen/dm_16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtLayoutEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/color_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtLayoutPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dm_8dp"
                android:hint="@string/password"
                app:boxBackgroundColor="@color/color_white"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkRememberLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dm_8dp"
                android:text="@string/remember"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dm_24dp"
                android:text="@string/log_in"
                android:textColor="@color/color_white"
                app:backgroundTint="@color/colorAccent"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

            <Button
                android:id="@+id/btnNavigateToCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/dm_8dp"
                android:layout_gravity="center"
                android:text="@string/create_account"
                android:textSize="@dimen/dm_12sp"
                android:textColor="@color/colorTextLink"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>