<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background_image"
tools:context=".register.view.RegisterFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="@dimen/dm_300dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dm_8dp"
        app:cardBackgroundColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dm_16dp"
            android:paddingTop="@dimen/dm_8dp"
            android:paddingBottom="@dimen/dm_16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtLayoutNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:boxBackgroundColor="@color/color_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtLayoutEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dm_8dp"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/color_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtLayoutPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dm_8dp"
                android:hint="@string/password"
                app:boxBackgroundColor="@color/color_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtLayoutRepeatPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dm_8dp"
                android:hint="@string/repeat_password"
                app:boxBackgroundColor="@color/color_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRepeatPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dm_24dp"
                android:text="@string/create_account"
                android:textColor="@color/color_white"
                app:backgroundTint="@color/colorAccent"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>