<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentGameEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".gameedit.view.GameEditFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardGameEdit"
            android:layout_width="@dimen/dm_300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            app:cardBackgroundColor="@color/color_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/dm_16dp"
                android:paddingTop="50dp"
                android:paddingBottom="@dimen/dm_16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtLayoutNameEditGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    app:boxBackgroundColor="@color/color_white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNameEditGame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtLayoutCreatedAtEditGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dm_8dp"
                    android:hint="@string/created_at"
                    app:boxBackgroundColor="@color/color_white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCreatedAtEditGame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtLayoutDescriptionEditGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dm_8dp"
                    android:hint="@string/description"
                    app:boxBackgroundColor="@color/color_white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDescriptionAtEditGame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:lines="5" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSaveGame"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dm_24dp"
                    android:text="@string/save_game"
                    android:textColor="@color/color_white"
                    app:backgroundTint="@color/colorAccent" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btnAddGameImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/add_game_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_camera_24"
            app:civ_circle_background_color="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>